# mpg321

./: .gitignore  Makefile.am  Makefile.in  README  TODO  aclocal.m4  ao.c  config.h.in  configure  configure.ac  fbuffer.c  getopt.c  mad.c  mpg321.1  mpg321.c  mpg321.h  mpg321.sgml  network.c  options.c  playlist.c  remote.c  scrobbler.c
debian/: README.debian  changelog  control  copyright  dirs  docs  postinst  prerm  rules  watch
debian/patches/: .dpkg-source-applied  README_fix  ao_fix  configure.patch  configure_add  git_ignore  gnu_hurd  mad_fix  mpg321_man  mpg321_ng_fix  scrobbler_makefile.patch  scrobbler_recursive.patch  scrobbler_recursive_man.patch  series  xterm_option  xterm_title
