bin_PROGRAMS = mpg321

mpg321_SOURCES = \
	mpg321.c \
	mad.c \
	playlist.c \
	network.c \
	mpg321.h \
	getopt.c \
	getopt1.c \
	getopt.h \
	remote.c \
	ao.c \
	options.c \
	auth.c \
	scrobbler.c

SUBDIRS = 
EXTRA_DIST = README.remote HACKING BUGS mpg321.sgml mpg321.1 $(srcdir)/debian/*

man_MANS = mpg321.1
